--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<p>I want to become a developer because I’m deeply fascinated by how technology can solve real-world problems and make life easier. I enjoy the process of thinking logically, finding creative solutions, and bringing ideas to life through code. Development allows me to keep learning and improving, as there is always something new to explore — whether it’s a programming language, a framework, or a way to optimize performance. I find satisfaction in building applications that can help people and in seeing my work have a tangible impact. Beyond the technical side, being a developer gives me the opportunity to grow, collaborate with others, and contribute to projects that can make a difference in the world.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
